# c-snippets

./: .gitignore  README.md
cmake-hello/: CMakeLists.txt  HelloWorld.cpp  README.md
cmake-hello/Hello/: CMakeLists.txt  Speaker.cpp  Speaker.h
gdb-try/: test.c
tensorflow-for-c/: hello_tf.c
try-cmake/: CMakeLists.txt  README.md  main.cpp
